2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: fixed check-target
	attribute name for libvolume_id.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: build libdaemon with
	--disable-lynx by default.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: let build slaves always autogen (or
	configure).

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: updated projecthamster name, as
	the module is now named hamster-applet.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: disable usepty as it is often the cause of
	problems.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.24.modules, modulesets/gnome-suites-2.24.modules:
	moved projecthamster to GNOME svn and the official desktop suite.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: help pointer on table headers to hint
	about a title.

	* jhbuild/buildbot/status/web/feeder.py: improved RSS and Atom feeds
	content.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: fixed background image repeat; changed
	text color for offline hosts.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: added padding for long slave names.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	buildbot/public_html/lgo.css: changed layout to have only one column
	per buildslave, with icons and tooltips to give details; and a totals
	row at the bottom.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* buildbot/template.html, buildbot/public_html/lgo.css,
	jhbuild/buildbot/status/web/__init__.py: cleaned up homepage HTML,
	removing extra classes and moving stuff to CSS.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py: let master honor the skip configuration
	variable.
