@@ -249,6 +249,9 @@ td.offline {
 	color: #000;
 	background: #f88;
 }
+td.failedchecks {
+	background: #fa4;
+}
 
 
 /* From classic */
