@@ -1,5 +1,10 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/status/web/__init__.py,
+	buildbot/public_html/lgo.css: paint failures in 'make check' as orange.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-external-deps-2.24.modules: fixed check-target
 	attribute name for libvolume_id.
 
